Fix image fetching in provider service